[package]
name = "may_process"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]

[dependencies]
may = { git = "https://github.com/Xudong-Huang/may.git" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
may_signal = { git = "https://github.com/Xudong-Huang/may_signal.git" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "handleapi",
  "winerror",
  "minwindef",
  "processthreadsapi",
  "synchapi",
  "threadpoollegacyapiset",
  "winbase",
  "winnt",
]
